# gg-game-mechanics

./: .gitignore  docker-compose.devenv.yml
src/wax/ft/: CMakeCache.txt  CMakeLists.txt  Makefile
src/wax/ft/ft/: CMakeCache.txt  Makefile
src/wax/ft/include/eosio.token/: eosio.token.hpp
src/wax/ft/ricardian/: eosio.token.contracts.md
src/wax/ft/src/: CMakeLists.txt  eosio.token.cpp
src/wax/ft_test/: hydra.yml  package-lock.json  package.json
src/wax/ft_test/tests/: ft.test.js
src/wax/ft_test/tests/fixtures/ft/: accounts.json  minters.json  stat.json
src/wax/nft/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt
src/wax/nft/include/: atomicassets.hpp  nft.hpp
src/wax/nft/include/serialization/: data.hpp
src/wax/nft/nft/: CMakeCache.txt  Makefile
src/wax/nft/ricardian/: nft.contracts.md
src/wax/nft/src/: CMakeLists.txt  nft.cpp
src/wax/nft_test/: hydra.yml  package-lock.json  package.json
src/wax/nft_test/tests/: nft.test.js
src/wax/nft_test/tests/fixtures/atomicassets/: assets.json  collections.json  config.json  schemas.json  templates.json  tokenconfigs.json
src/wax/nft_test/tests/fixtures/ft/: accounts.json  minters.json  stat.json
src/wax/nft_test/tests/fixtures/nft/: accounts.json  amounts.json  assets.json  nfts.json
src/wax/wallets/: create_atomicassets_collection.sh  launch_eosio.sh  wallets.md
